--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,55 @@
+/* google font */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');
+
+/* start glopal styles */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body{
+    background-color: #edf2f8;
+    font-size: 13px;
+    font-family: 'manrope';
+}
+
+.container{
+    min-height: 100vh;
+}
+
+.card{
+    max-width: 725px;
+}
+/* end glopal styles */
+.image{
+    max-width: 40%;
+}
+
+.image img{
+    width: 120%;
+    height: 100%;
+}
+
+.card-body{
+    padding: 40px;
+}
+
+.card h5{
+    color:  hsl(217, 19%, 35%);
+    line-height: 1.4;
+}
+
+.info img{
+    max-width: 45px;
+}
+
+.share{
+    background: #eaf1fb;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
