--- a/css/style.css
+++ b/css/style.css
@@ -52,4 +52,45 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    bottom: 150%;
+    cursor: pointer;
+}
+
+.shareit{
+    position: absolute;
+    background-color: #49556b;
+    width: 250px;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 15px;
+    bottom: 150%;
+    box-shadow: 0 10px 30px #0000004d;
+    opacity: 0;
+    transition: 0.2s;
+    visibility: hidden;
+}
+
+.shareit.show{
+    opacity: 1;
+    visibility: visible;
+}
+
+.shareit::after{
+    content: '';
+    border: solid 10px;
+    border-color: #49556b transparent transparent transparent;
+    position: absolute;
+    top: 100%;
+}
+
+.shareit span{
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+.shareit img{
+    width: 20px;
+    cursor: pointer;
 }
